home page modifications

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -938,7 +938,6 @@ cookie_message=Diese Webseite verwendet Cookies, um die Bedienfreundlichkeit zu 
 
 feedback_icon = Rückmeldung
 
-explore_collection_text = Erkunden Sie den Bestand der Einzelblätter
 
 
 search_results_relevance = Relevanz
@@ -951,11 +950,14 @@ project_link_text = Projekte
 collection_link_value = https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt
 project_link_value = https://projects.tib.eu/haupt
 contact_link_text = Kontakt
-search_collection_text = Durchsuchen Sie den Bestand der Einzelblätter
-more_objects_in_albrecht_haupt_collection = Weitere Teilbestände der Sammlung Albrecht Haupt
 
-haupt_library_img_text = Bibliothek
-haupt_library_img_description = Albrecht Haupts Sammlung der Bücher und Traktate ist im TIB-OPAC katalogisiert (ca. 1600 Bände).
+search_collection_text = Durchsuchen Sie die Sammlung
+browse_collections_text = Durchsuchen Sie die Teilbestände
+explore_collection_text = Einfache Sucheinstiege
+
+
+more_objects_in_albrecht_haupt_collection = Die Bibliothek von Albrecht Haupt
+
 haupt_sketches_img_text = Reiseskizzen 
 haupt_sketches_img_description = Die eigenhändigen Reiseskizzen, Studien und Bildvorlagen Albrecht Haupts sind bislang in allegro C erschlossen (ca. 6000 Blatt).
 
@@ -1007,4 +1009,28 @@ meta_description_co_text_participants_2 = Der {0} mit dem Titel {1} wurde gescha
 meta_description_co_text_participants_1 = Die {0} mit dem Titel {1} wurde geschaffen von {2}
 
 meta_co_title = {1} - {0}
+
+composite_volumes_img_text=Gebundene Graphik
+single_sheets_img_text=Graphische Einzelblätter
+travel_sketches_img_text=Reiseskizzen
+single_sheets_collection_descripton=Der Teilbestand der Einzelgraphiken umfasst ca. 6200 Objekte mit Bildern. Bitte beachten Sie bei Ihrer Suche, dass der Grad der Erschließung noch stark variiert. Bislang nur rudimentär erfasste Objekte lassen sich am besten über die groben Facetten von Objekttyp, Geographische Einordung, Sachgruppe (Oberbegriff) filtern.
+composite_volumes_description=Der Teilbestand der gebundenen Graphik aus dem Bibliotheksbestand (ca. 250 Bände) wird mit seinen Einzelobjekten (ca. 3500 Werke) erfasst und hier schrittweise bereitgestellt (work in progress).
+travel_sketches_description=Der Teilbestand der Reiseskizzen wurde maschinell aus einer älteren Datenbank (allegro C) übernommen. Ca. ein Drittel (2079 Werke) der 6000 Objekte sind bebildert. Weitere Digitalisierung und Datenrevision erfolgen derzeit nur anlassbezogen.
+
+drawing_img_text = Zeichnung
+drawing_img_description = Erkunden Sie themen- und bestandsübergreifend alle Objekte der Sammlung vom Typ Zeichnung.
+print_img_text = Druckgraphik
+print_img_description = Erkunden Sie themen- und bestandsübergreifend alle Objekte der Sammlung vom Typ Druckgraphik.
+architecture_img_text = Architektur
+architecture_img_description = Erkunden Sie gattungs- und bestandsübergreifend Objekte der Sachgruppe Architektur.
+ornament_img_text = Ornament
+ornament_img_description = Erkunden Sie gattungs- und bestandsübergreifend Objekte der Sachgruppe Ornament.
+garden_img_text = Garden
+garden_img_description = Erkunden Sie alle Objekte zum Thema Garten.
+scenography_img_text = Szenographie
+scenography_img_description = Erkunden Sie alle Objekte zum Thema Szenographie.
+
+haupt_special_collection_img_text = Zu den digitalisierten Monographien (Auswahl)
+
+haupt_library_img_text = Zum TIB Portal (alle Titel)
 
