--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -11,13 +11,12 @@ collection_link_value = https://www.tib.eu/en/search-discover/special-collection
 project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
-search_collection_text = Search the collection of individual graphic sheets
-explore_collection_text = Explore the collection of individual graphic sheets
+search_collection_text = Search the collection
+explore_collection_text = Einfache Sucheinstiege
+browse_collections_text = Durchsuchen Sie die Teilbestände
 
-more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
+more_objects_in_albrecht_haupt_collection = The Albrecht Haupt library
 
-haupt_library_img_text = Library
-haupt_library_img_description = Albrecht Haupt's collection of books and treatises is catalogued in TIB OPAC (ca. 1600 volumes).
 haupt_sketches_img_text = Travel sketches
 haupt_sketches_img_description = Travel sketches and studies of Albrecht Haupt's own hand are indexed with allegro C so far (ca. 6000 sheets).
 
@@ -53,3 +52,29 @@ meta_description_co_text_participants_2 = The {0} with title {1} was created by 
 meta_description_co_text_participants_3 = The {0} with title {1} was created by {2}
 
 meta_co_title = {1} - {0}
+
+
+composite_volumes_img_text=Bound graphic volumes
+single_sheets_img_text=Single sheets
+travel_sketches_img_text=Travel sketches
+single_sheets_collection_descripton=The partial inventory of individual graphics includes around 6,200 objects with images. When searching, please note that the level of access still varies greatly. Objects that have only been recorded rudimentarily so far can best be filtered using the broad facets of object type, geographical classification, subject group (general term).
+composite_volumes_description=The partial inventory of bound graphic volumes from the library holdings (approx. 250 volumes) is recorded with its individual objects (approx. 3500 works) and made available here step by step (work in progress).
+travel_sketches_description=The partial inventory of travel sketches was transferred automatically from an older database (allegro C). Approximately one third (2079 works) of the 6000 objects are illustrated. Further digitization and data revision are currently only carried out on an ad hoc basis.
+
+
+drawing_img_text = Drawing
+drawing_img_description = Explore all objects of type drawing in the collection across all subjects and holdings.
+print_img_text = Print
+print_img_description = Explore all objects of type print in the collection across all subjects and holdings.
+architecture_img_text = Architecture
+architecture_img_description = Explore all objects from the architecture category across all genres and holdings.
+ornament_img_text = Ornament
+ornament_img_description = Explore all objects from the ornament category across all genres and holdings.
+garden_img_text = Garden
+garden_img_description = Explore all objects on the subject of garden.
+scenography_img_text = Scenography
+scenography_img_description = Explore all objects on the subject of scenography.
+
+haupt_special_collection_img_text = To the digitized volumes (selection)
+haupt_library_img_text = To the TIB Portal (all titles)
+haupt_library_img_description = All volumes of Haupt's library are catalogued and can be found in the TIB Portal.
