--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -12,8 +12,8 @@ project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
 search_collection_text = Search the collection
-explore_collection_text = Einfache Sucheinstiege
-browse_collections_text = Durchsuchen Sie die Teilbestände
+explore_collection_text = Explore the collection
+browse_collections_text = Search parts of collection
 
 more_objects_in_albrecht_haupt_collection = The Albrecht Haupt library
 
@@ -30,7 +30,7 @@ footer_technical_information = Technical information
 
 menu_images_and_metadata = Images and metadata
 
-search_help_text =           <p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;font-family:Calibri,serif;margin-top:0;page-break-before:always;margin-bottom:0;margin-right:0;">Enter a keyword in the <span style="font-weight:bold;font-family:serif;">search field </span>or combine keywords with the boolean operators. All data fields will be matched with your query.</p><p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;font-family:Calibri,serif;margin-top:0;margin-bottom:0;margin-right:0;">The <span style="font-weight:bold;font-family:serif;">filter button</span> (or an empty search query) will take you to the total stock of digitised works. The filters are arranged in tabs and can be used to narrow down the result set.</p><p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;margin-top:0;margin-bottom:0;margin-right:0;"><span style="font-family:Calibri,serif;">Please note that this is a </span><span style="font-weight:bold;font-family:serif;">work in progress</span><span style="font-family:Calibri,serif;">. All works are linked with object type, geographical assignment, subject group (generic term), dimensions, a title (or auxiliary title) as well as their digital images. Data on the time and place of creation, artists, technique, depicted content, etc. will be successively added if not yet available.</span></p>       
+search_help_text = <p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;font-family:Calibri,serif;margin-top:0;page-break-before:always;margin-bottom:0;margin-right:0;">Enter a keyword in the <span style="font-weight:bold;font-family:serif;">search field </span>or combine keywords with the boolean operators. All data fields will be matched with your query.</p><p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;font-family:Calibri,serif;margin-top:0;margin-bottom:0;margin-right:0;">The <span style="font-weight:bold;font-family:serif;">filter button</span> (or an empty search query) will take you to the total stock of digitised works. The filters are arranged in tabs and can be used to narrow down the result set.</p><p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0083334rem;margin-top:0;margin-bottom:0;margin-right:0;"></p>
 search_filters_help_text = Filter options
 
 gesah_made_on=on
@@ -57,9 +57,9 @@ meta_co_title = {1} - {0}
 composite_volumes_img_text=Bound graphic volumes
 single_sheets_img_text=Single sheets
 travel_sketches_img_text=Travel sketches
-single_sheets_collection_descripton=The partial inventory of individual graphics includes around 6,200 objects with images. When searching, please note that the level of access still varies greatly. Objects that have only been recorded rudimentarily so far can best be filtered using the broad facets of object type, geographical classification, subject group (general term).
-composite_volumes_description=The partial inventory of bound graphic volumes from the library holdings (approx. 250 volumes) is recorded with its individual objects (approx. 3500 works) and made available here step by step (work in progress).
-travel_sketches_description=The partial inventory of travel sketches was transferred automatically from an older database (allegro C). Approximately one third (2079 works) of the 6000 objects are illustrated. Further digitization and data revision are currently only carried out on an ad hoc basis.
+single_sheets_collection_descripton=The partial collection of single sheets includes around 6,200 objects with images. When searching, please note that the level of indexing still varies greatly. Objects that have only been recorded rudimentarily so far can best be filtered using the broad facets of object type, geographical classification, subject group (general term).
+composite_volumes_description=The partial collection of bound graphic volumes from the library holdings (approx. 250 volumes) is recorded with its individual objects (approx. 3500 works) and made available here step by step (work in progress).
+travel_sketches_description=The partial collection of travel sketches was transferred automatically from an older database (allegro C). Approximately one third (2079 works) of the 6000 objects are illustrated. Further digitization and data revision are currently only carried out on an ad hoc basis.
 
 
 drawing_img_text = Drawing
