Fixed Garten label

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -1025,7 +1025,7 @@ architecture_img_text = Architektur
 architecture_img_description = Erkunden Sie gattungs- und bestandsübergreifend Objekte der Sachgruppe Architektur.
 ornament_img_text = Ornament
 ornament_img_description = Erkunden Sie gattungs- und bestandsübergreifend Objekte der Sachgruppe Ornament.
-garden_img_text = Garden
+garden_img_text = Garten
 garden_img_description = Erkunden Sie alle Objekte zum Thema Garten.
 scenography_img_text = Szenographie
 scenography_img_description = Erkunden Sie alle Objekte zum Thema Szenographie.
